--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -476,6 +476,7 @@
                             <child>
                               <widget class="GtkLabel" id="nickList_label">
                                 <property name="visible">True</property>
+								<property name="can_focus">False</property>
                                 <property name="use_markup">True</property>
                                 <property name="selectable">True</property>
                               </widget>
