--- a/glade/dialogs/dcc.glade
+++ b/glade/dialogs/dcc.glade
@@ -8,6 +8,7 @@
     <property name="default_width">550</property>
     <property name="default_height">300</property>
     <property name="type_hint">normal</property>
+    <property name="has_separator">False</property>
     <child internal-child="vbox">
       <widget class="GtkVBox" id="dialog-vbox1">
         <property name="visible">True</property>
@@ -19,6 +20,7 @@
             <property name="can_focus">True</property>
             <property name="hscrollbar_policy">automatic</property>
             <property name="vscrollbar_policy">automatic</property>
+            <property name="shadow_type">etched-in</property>
             <child>
               <widget class="GtkTreeView" id="transferView">
                 <property name="visible">True</property>
@@ -36,7 +38,7 @@
             <property name="layout_style">end</property>
             <child>
               <widget class="GtkButton" id="removeButton">
-                <property name="label" translatable="yes">gtk-remove</property>
+                <property name="label">gtk-remove</property>
                 <property name="response_id">333</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -51,7 +53,7 @@
             </child>
             <child>
               <widget class="GtkButton" id="closeButton">
-                <property name="label" translatable="yes">gtk-close</property>
+                <property name="label">gtk-close</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
