--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -478,7 +478,7 @@
                                 <property name="visible">True</property>
 								<property name="can_focus">False</property>
                                 <property name="use_markup">True</property>
-                                <property name="selectable">True</property>
+                                <property name="selectable">False</property>
                               </widget>
                               <packing>
                                 <property name="expand">False</property>
