Make sense, do it

--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -15,7 +15,7 @@
         <property name="visible">True</property>
         <property name="orientation">vertical</property>
         <child>
-          <widget class="GtkMenuBar" id="menubar1">
+          <widget class="GtkMenuBar" id="mainMenuBar">
             <property name="visible">True</property>
             <child>
               <widget class="GtkMenuItem" id="menu_tekka_item">
