--- a/glade/menus/serverTreeMenu.ui
+++ b/glade/menus/serverTreeMenu.ui
@@ -39,6 +39,16 @@
       </object>
     </child>
     <child>
+      <object class="GtkImageMenuItem" id="joinChannelItem">
+        <property name="label" translatable="yes">_Join a Channel</property>
+        <property name="visible">True</property>
+        <property name="use_underline">True</property>
+        <property name="image">image10</property>
+        <property name="use_stock">False</property>
+        <signal name="activate" handler="joinChannelItem_activate_cb"/>
+      </object>
+    </child>
+    <child>
       <object class="GtkImageMenuItem" id="joinItem">
         <property name="label" translatable="yes">_Join</property>
         <property name="visible">True</property>
@@ -152,5 +162,9 @@
   <object class="GtkImage" id="image9">
     <property name="visible">True</property>
     <property name="stock">gtk-close</property>
+  </object>
+  <object class="GtkImage" id="image10">
+    <property name="visible">True</property>
+    <property name="stock">gtk-go-forward</property>
   </object>
 </interface>
