--- a/glade/dialogs/hide.glade
+++ b/glade/dialogs/hide.glade
@@ -318,7 +318,7 @@
             <property name="layout_style">end</property>
             <child>
               <widget class="GtkButton" id="button1">
-                <property name="label" translatable="yes">gtk-close</property>
+                <property name="label">gtk-close</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
