--- a/glade/dialogs/plugins.glade
+++ b/glade/dialogs/plugins.glade
@@ -77,7 +77,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="label" translatable="yes">gtk-close</property>
+                <property name="label">gtk-close</property>
                 <property name="use_stock">True</property>
                 <property name="response_id">-7</property>
                 <signal name="clicked" handler="closeButton_clicked_cb"/>
